[gd_scene load_steps=9 format=2]

[ext_resource path="res://Escenas/Proyectiles/Proyectil.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Proyectiles/ProyectilEnemigo.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Proyectiles/proyectlBlanco.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Proyectiles/proyectlVerde.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.02993

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Rotar Lento"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteArana:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Rotar Rapido"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteArana:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="ProyectilEnemigo" instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 2.98023e-08 )
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="." index="1"]
visible = false
scale = Vector2( 0.5, 0.5 )
frame = 1

[node name="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( -0.0999997, -4.76837e-07 )
scale = Vector2( 0.69, 0.68 )

[node name="SpriteArana" type="Sprite" parent="." index="3"]
visible = false
texture = ExtResource( 3 )

[node name="SpriteCactus" type="Sprite" parent="." index="4"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
autoplay = "Rotar Lento"
anims/RESET = SubResource( 2 )
"anims/Rotar Lento" = SubResource( 3 )
"anims/Rotar Rapido" = SubResource( 4 )
